[Update] 카찹 관련 정보 업데이트

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th class="table-title" scope="col">개발한 프로젝트 서비스</th>
+                    <th class="table-title" scope="col">통합 모빌리티 서비스 : 카찹</th>
                     <td>
                       <div>[카찹]  통합 모빌리티 서비스  : 다양하게 분산되어 있는 모빌리티 서비스를 한 곳에서 통합 검색->결제->반납의 서비스를 제공합니다.</div>
                       <div>
@@ -128,7 +128,7 @@
                       </div>
                     </td>
                     <td class="text-center">
-                      <div class="">( ~ M/M)</div>
+                      <div class="">( 18/12~ 20/02)</div>
                       <div class="progress">
                           <div class="progress-bar progress-bar-striped bg-info" style="width: 100%">
                           <span class="progress-desc">개발 완료</span>
@@ -143,13 +143,22 @@
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h5 class="modal-title" id="Modal1Label">개발 프로젝트 증빙 자료</h5>
+                                <h5 class="modal-title" id="Modal1Label">통합 모빌리티 서비스 : 카찹</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
-                                <img src="assets/svg/your-project.svg" alt="">
+                                <video muted autoplay loop width="100%" height="100%">
+                                  <source src="assets/video/carchap_service.mp4" type="video/mp4">
+                                  <strong>Your browser does not support the video tag.</strong>
+                                </video>
                                 <p class="modal-desc">
-                                  여기에 개발한 프로젝트에 대한 상세한 내용(서비스 개요, 사용 프로그램 언어, 사용 라이브러리, 개발 기여도, 개발 기간, 외부 링크 등을 입력해 주세요. 
+                                  <br/>서비스 개요 : 파편화된 모빌리티 서비스를 한 곳에서
+                                  <br/>사용 언어 : 자바, 코틀린
+                                  <br/>사용 라이브러리 : Google Map. Firebase, Social Login, etc..
+                                  <br/>개발 기여도 : 안드로이드 앱 개발(단독)
+                                  <br/>개발 기간 : 1년 6개월
+                                  <br/>앱 링크 :  <a href="https://play.google.com/store/apps/details?id=org.techtown.carchap_v11&hl=ko&gl=US" class="btn btn-google" target="_blank" >Google Play Store</a> 
+                                  <a href="https://apps.apple.com/us/app/%EC%B9%B4%EC%B0%B9-%EC%9D%B4%EB%8F%99%EC%88%98%EB%8B%A8-%ED%86%B5%ED%95%A9-%ED%94%8C%EB%9E%AB%ED%8F%BC/id1506198003" class="btn btn-google" target="_blank" >App Store</a> 
                                 </p>
                               </div>
                               <div class="modal-footer">
