[Update] 기술 stack section 1차 업데이트 완료

--- a/index.html
+++ b/index.html
@@ -350,24 +350,20 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th class="table-title" scope="col">2021 국제 해커톤</th>
+                    <th class="table-title" scope="col">2019 청년 스타트업 어워즈 <br/> 2019 경기도 대학생 융합 창업지원 공모전</th>
                     <td>
-                      <div>[참여팀명] + 대회의 간략한 개요 + 서비스의 개요 </div>
+                      <div>[카찹] 통합 모빌리티 서비스 </div>
                       <div>
                         #검색연관키워드 #검색연관키워드 #검색연관키워드
                         #검색연관키워드 #검색연관키워드 #검색연관키워드
                         #검색연관키워드
                       </div>
                       <div>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">Redux</span>
-                        <span class="badge bg-grey">JavaScript ES6</span>
-                        <span class="badge bg-grey">HTML5 and CSS3</span>
-                        <span class="badge bg-grey">Bootstrap 4</span>
-                        <span class="badge bg-grey">Node.js</span>
-                        <span class="badge bg-grey">Koa</span>
-                        <span class="badge bg-grey">MongoDB</span>
-                        <span class="badge bg-grey">AWS EC2</span>
+                        <span class="badge bg-grey">Android</span>
+                        <span class="badge bg-grey">Java</span>
+                        <span class="badge bg-grey">Kotlin</span>
+                        <span class="badge bg-grey">Firebase</span>
+                        <span class="badge bg-grey">Php</span>
                       </div>
                       <div class="profile"> 
                         <img src="/assets/img/user1.jpg" alt="">
@@ -377,7 +373,7 @@
                         <img src="/assets/img/user5.jpg" alt="">
                       </div>
                     </td>
-                    <td class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac">대상</td>
+                    <td class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac">대상<br/>S등급(대상)</td>
                     <td class="text-center">
                       <span class="text-muted" data-bs-toggle="modal" data-bs-target="#myModal2" >
                         <i class="bi bi-file-earmark-slides"></i>
@@ -519,7 +515,7 @@
       <section class="container pt mt mb-5" id="stacks">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Stacks</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
-          만들고자 하는 목표에 대해 필요한 기술들을 빠르게 습득하고 구현합니다.
+          T자형 지식을 추구합니다. 다만 지금은 수직, 수평적인 지식을 둘다 키워야하는 주니어로써 다양한 기술, 언어를 습득해
           할 수 있는 경계선을 더 넓혀 나가고자 합니다.
         </div>
         <div class="card shadow">
@@ -552,7 +548,7 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
                       </div>
                     </td>
                   </tr>
@@ -573,7 +569,7 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
                       </div>
                     </td>
                   </tr>
@@ -635,7 +631,7 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                       </div>
                     </td>
@@ -656,7 +652,7 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                       </div>
                     </td>
@@ -664,7 +660,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="table-desc fonsiz-xs fonwei-kr-sm letsp-sm text-center color-basic-opac">객관화하기 어려운 관계로, 제가 이해하고 구현할 수 있는 수준을 작성했습니다.</div>
+            <div class="table-desc fonsiz-xs fonwei-kr-sm letsp-sm text-center color-basic-opac">5개의 별은 부끄럽게도 평생을 공부해도 가질수 있을까 의문입니다만, 쟁취해보려고 합니다.</div>
           </div>
         </div>
       </section>
