[New Feature] plotly chart library test

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
             <div class="card mb-3">
               <div class="pt-5 pb-4">
-                <canvas id="chart1"></canvas>
+                <canvas id="chart_frondEnd"></canvas>
               </div>
               <div class="card-body">
                 <div>
@@ -682,7 +682,7 @@
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
             <div class="card mb-3">
               <div class="pt-5 pb-4">
-                <canvas id="chart2"></canvas>
+                <canvas id="chart_backEnd"></canvas>
               </div>
               <div class="card-body">
                 <h4 class="card-title fonsiz-xl fonwei-en-xxl letsp-xxl text-upper text-center text-primary">Back end</h4>
@@ -693,7 +693,7 @@
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
             <div class="card mb-3">
               <div class="pt-5 pb-4">
-                <canvas id="chart3"></canvas>
+                <canvas id="chart_Database"></canvas>
               </div>
               <div class="card-body">
                 <h4 class="card-title fonsiz-xl fonwei-en-xxl letsp-xxl text-upper text-center text-primary">Data base</h4>
@@ -704,7 +704,7 @@
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
             <div class="card mb-3">
               <div class="pt-5 pb-4">
-                <canvas id="chart4"></canvas>
+                <canvas id="chart_util"></canvas>
               </div>
               <div class="card-body">
                 <h4 class="card-title fonsiz-xl fonwei-en-xxl letsp-xxl text-upper text-center text-primary">Utilities</h4>
@@ -1032,6 +1032,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
