--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <header>
       <div class="container">
         <h1>개발자 <strong>강경석</strong> 입니다</h1>
+        <h1>리뉴얼 중입니다.</h1>
       </div>
     </header>
     <!-- Header 끝 -->
