[Update] contact 관련 정보 업데이트

--- a/index.html
+++ b/index.html
@@ -1365,26 +1365,17 @@
             >
               Contact
             </h2>
-            <p
-              class="fonsiz-sm color-basic fonsiz-xl fonwei-kr-xs lh-md letsp-xs ws-sm my-4"
-            >
-              여기까지 읽어 주셔서 고맙습니다. <br />
-              더 성실하게, 항상 최선을 다하겠습니다.
-            </p>
           </div>
         </div>
       </section>
       <section class="container backimg">
-        <div
-          class="name-card d-flex justify-content-center align-items-center h-100"
-        >
+        <div class="name-card d-flex justify-content-center">
           <div class="contact-body shadow">
             <div class="text-center mb-4">
-              <h1>Ryu Jun Yeol</h1>
-              <small>JavaScript Fullstack Developer</small>
+              <h1>Kang Gyeong Seok</h1>
+              <small>FrontEnd Developer</small>
             </div>
             <div class="d-flex">
-              <img src="/assets/img/face.png" />
               <div class="ps-3">
                 <ul class="list-unstyled">
                   <li>
@@ -1397,8 +1388,8 @@
                     <span>
                       <i class="bi bi-envelope"></i>
                       Email :
-                      <a href="mailto:kijepark@kijeslab.com">
-                        <strong>kijepark@kijeslab.com</strong>
+                      <a href="mailto:gyeongseok.kang@gmail.com">
+                        <strong>gyeongseok.kang@gmail.com</strong>
                       </a>
                     </span>
                   </li>
@@ -1406,23 +1397,23 @@
                     <span>
                       <i class="bi bi-telephone-inbound"></i>
                       Phone :
-                      <a href="tel:010-7688-3321">
-                        <strong>010-7688-3321</strong>
+                      <a href="tel:010-6626-1491">
+                        <strong>010-6626-3321</strong>
                       </a>
                     </span>
                   </li>
                   <li>
                     <span>
                       <i class="bi bi-house-door"></i>
-                      Website :
-                      <a href="http://kijepark.com">
-                        <strong>kijepark.com</strong>
+                      Blog :
+                      <a href="https://all-dev-kang.tistory.com/">
+                        <strong>Dev & Private blog</strong>
                       </a>
                     </span>
                   </li>
                 </ul>
                 <div class="contact-desc">
-                  “Talk is cheap. show me the code.”
+                  “같이 일하고싶은 동료가 되겠습니다.”
                 </div>
               </div>
             </div>
@@ -1432,13 +1423,17 @@
         <!-- footer 시작  -->
         <footer class="container mt-auto mb-5">
           <div class="social-box text-center">
-            <a class="social-title" href="#">GitHub</a>
-            <a class="social-title" href="#">Facebook</a>
-            <a class="social-title" href="#">Twitter</a>
-            <a class="social-title" href="#">LinkedIn</a>
-            <a class="social-title" href="#">Instagram</a>
-            <a class="social-title" href="#">Website</a>
-            <a class="social-title" href="#">Blog</a>
+            <a class="social-title" href="https://github.com/gyeongseokKang"
+              >GitHub</a
+            >
+            <a class="social-title" href="https://all-dev-kang.tistory.com/"
+              >Blog</a
+            >
+            <a
+              class="social-title"
+              href="https://www.linkedin.com/in/%EA%B2%BD%EC%84%9D-%EA%B0%95-5190751aa/"
+              >LinkedIn</a
+            >
           </div>
           <div>
             <hr />
