--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Kije’s LAB" />
+    <meta name="author" content="gyeongseokKang" />
     <meta name="keywords" content="frontEnd, portfolio, developer" />
     <meta name="description" content="Kang's Portfolio" />
     <title>Kang's Portfolio</title>
@@ -39,9 +39,28 @@
   <body>
     <!-- Header 시작 -->
     <header>
-      <div class="container">
-        <h1>개발자 <strong>강경석</strong> 입니다</h1>
-        <h1>리뉴얼 중입니다.</h1>
+      <div>
+        <div class="container" style="display: flex">
+          <div style="flex: 2">
+            <h1>FrondEnd</h1>
+            <h1>개발자 <strong>강경석</strong> 입니다</h1>
+            <h2>리뉴얼 중입니다.</h2>
+          </div>
+          <div style="flex: 1">
+            <img
+              style="
+                width: 300px;
+                height: 300px;
+                border: 3px solid;
+                border-radius: 70px;
+                -moz-border-radius: 7px;
+                -khtml-border-radius: 7px;
+                -webkit-border-radius: 50px;
+              "
+              src="/assets/img/myface.jpg"
+            />
+          </div>
+        </div>
       </div>
     </header>
     <!-- Header 끝 -->
