[Update] awards section update - 세분화됬던 수상관련을 큰 카테고리에 따라 통합 - 중요도 순에 따라 배치

--- a/index.html
+++ b/index.html
@@ -221,11 +221,6 @@
                       </div>
                       <div class="progress-desc">프론트 앤드 시각화파트</div>
                     </td>
-                    <td class="text-center">
-                      <span class="text-muted">
-                        <i class="bi bi-file-earmark-slides"></i>
-                      </span>
-                    </td>
                   </tr>
                   <tr>
                     <th class="table-title" scope="col">
@@ -577,8 +572,12 @@
                 <tbody>
                   <tr>
                     <th class="table-title" scope="col">
-                      2019 청년 스타트업 어워즈 <br />
-                      2019 경기도 대학생 융합 창업지원 공모전
+                      2019<br />
+                      청년 스타트업 어워즈 <br />
+                      경기도 대학생 융합 창업지원 공모전 <br />
+                      흑석캠퍼스타운 창업경진대회 <br />
+                      스마트시티즌 챌린지 <br />
+                      서울과기대 창업아이디어 경진대회 <br />
                     </th>
                     <td>
                       <div>[카찹] 통합 모빌리티 서비스</div>
@@ -594,18 +593,15 @@
                         <span class="badge bg-grey">Firebase</span>
                         <span class="badge bg-grey">Php</span>
                       </div>
-                      <div class="profile">
-                        <img src="/assets/img/user1.jpg" alt="" />
-                        <img src="/assets/img/user2.jpg" alt="" />
-                        <img src="/assets/img/user3.jpg" alt="" />
-                        <img src="/assets/img/user4.jpg" alt="" />
-                        <img src="/assets/img/user5.jpg" alt="" />
-                      </div>
                     </td>
                     <td
                       class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac"
                     >
-                      대상<br />S등급(대상)
+                      대상<br />
+                      S등급(대상)<br />
+                      대상<br />
+                      촤우수상<br />
+                      은상<br />
                     </td>
                     <td class="text-center">
                       <span
@@ -638,13 +634,41 @@
                             </div>
                             <div class="modal-body">
                               <img
-                                src="assets/svg/your-awards.svg"
+                                src="assets/img/award/청년스타트업어워즈_대상_0원 (2).jpg"
                                 class="modal-img"
                                 alt=""
+                                style="width: 80%; height: 80%"
+                              />
+                              <img
+                                src="assets/img/award/경기도 창업경진 대상 수료증.jpeg"
+                                class="modal-img"
+                                alt=""
+                                style="width: 80%; height: 80%"
+                              />
+                              <img
+                                src="assets/img/award/흑석캠퍼스타운대상.jpg"
+                                class="modal-img"
+                                alt=""
+                                style="width: 80%; height: 80%"
+                              />
+                              <img
+                                src="assets/img/award/스마트시티즌 최우수상 (2).jpeg"
+                                class="modal-img"
+                                alt=""
+                                style="width: 80%; height: 80%"
+                              />
+                              <img
+                                src="assets/img/award/190927_과기대_창업_은상_만원.jpg"
+                                class="modal-img"
+                                alt=""
+                                style="width: 80%; height: 80%"
                               />
                               <p class="modal-desc">
-                                여기에 시상에 대한 증빙 자료(수상 관련 사진,
-                                관련 발표 자료등)를 입력해 주세요.
+                                프로젝트를 검증받기 위해 다양한 경진대회,
+                                공모전에 참가하였고 총 9개의 상을 받았습니다.<br />
+                                이후 팀원들과 창업을 하게 되었고, 해당 대회를
+                                통해 맺게된 인연을 통해 초기 투자를 받을 수
+                                있었습니다.
                               </p>
                             </div>
                             <div class="modal-footer">
@@ -661,123 +685,6 @@
                         </div>
                       </div>
                       <!-- Modal 끝 -->
-                    </td>
-                  </tr>
-                  <tr>
-                    <th class="table-title" scope="col">
-                      2021 판교 창업 경진 대회
-                    </th>
-                    <td>
-                      <div>[참여팀명] + 대회의 간략한 개요 + 서비스의 개요</div>
-                      <div>
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드
-                      </div>
-                      <div>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">Redux</span>
-                        <span class="badge bg-grey">JavaScript ES6</span>
-                        <span class="badge bg-grey">HTML5 and CSS3</span>
-                        <span class="badge bg-grey">Bootstrap 4</span>
-                        <span class="badge bg-grey">Node.js</span>
-                        <span class="badge bg-grey">Koa</span>
-                        <span class="badge bg-grey">MongoDB</span>
-                        <span class="badge bg-grey">AWS EC2</span>
-                      </div>
-                      <div class="profile">
-                        <img src="/assets/img/user1.jpg" alt="" />
-                        <img src="/assets/img/user2.jpg" alt="" />
-                        <img src="/assets/img/user3.jpg" alt="" />
-                      </div>
-                    </td>
-                    <td
-                      class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac"
-                    >
-                      최우수상
-                    </td>
-                    <td class="text-center">
-                      <span class="text-muted">
-                        <i class="bi bi-file-earmark-slides"></i>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th class="table-title" scope="col">인공지능 해커톤</th>
-                    <td>
-                      <div>[참여팀명] + 대회의 간략한 개요 + 서비스의 개요</div>
-                      <div>
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드
-                      </div>
-                      <div>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">Redux</span>
-                        <span class="badge bg-grey">JavaScript ES6</span>
-                        <span class="badge bg-grey">HTML5 and CSS3</span>
-                        <span class="badge bg-grey">Bootstrap 4</span>
-                        <span class="badge bg-grey">Node.js</span>
-                        <span class="badge bg-grey">Koa</span>
-                        <span class="badge bg-grey">MongoDB</span>
-                        <span class="badge bg-grey">AWS EC2</span>
-                      </div>
-                      <div class="profile">
-                        <img src="/assets/img/user1.jpg" alt="" />
-                        <img src="/assets/img/user2.jpg" alt="" />
-                        <img src="/assets/img/user3.jpg" alt="" />
-                        <img src="/assets/img/user4.jpg" alt="" />
-                        <img src="/assets/img/user5.jpg" alt="" />
-                      </div>
-                    </td>
-                    <td
-                      class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac"
-                    >
-                      대상
-                    </td>
-                    <td class="text-center">
-                      <span class="text-muted">
-                        <i class="bi bi-file-earmark-slides"></i>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th class="table-title" scope="col">스타트업 데모데이</th>
-                    <td>
-                      <div>[참여팀명] + 대회의 간략한 개요 + 서비스의 개요</div>
-                      <div>
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드
-                      </div>
-                      <div>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">Redux</span>
-                        <span class="badge bg-grey">JavaScript ES6</span>
-                        <span class="badge bg-grey">HTML5 and CSS3</span>
-                        <span class="badge bg-grey">Bootstrap 4</span>
-                        <span class="badge bg-grey">Node.js</span>
-                        <span class="badge bg-grey">Koa</span>
-                        <span class="badge bg-grey">MongoDB</span>
-                        <span class="badge bg-grey">AWS EC2</span>
-                      </div>
-                      <div class="profile">
-                        <img src="/assets/img/user1.jpg" alt="" />
-                        <img src="/assets/img/user2.jpg" alt="" />
-                        <img src="/assets/img/user3.jpg" alt="" />
-                        <img src="/assets/img/user4.jpg" alt="" />
-                        <img src="/assets/img/user5.jpg" alt="" />
-                      </div>
-                    </td>
-                    <td
-                      class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac"
-                    >
-                      우수상
-                    </td>
-                    <td class="text-center">
-                      <span class="text-muted">
-                        <i class="bi bi-file-earmark-slides"></i>
-                      </span>
                     </td>
                   </tr>
                 </tbody>
