--- a/index.html
+++ b/index.html
@@ -733,7 +733,10 @@
                         href="https://ko.wikipedia.org/wiki/%EC%9E%90%EB%B0%94%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8"
                         target="_blank"
                       >
-                        <img src="/assets/img/js.png" alt="JavaScript Logo" />
+                        <img
+                          src="/assets/img/stack/js.png"
+                          alt="JavaScript Logo"
+                        />
                       </a>
                     </td>
                     <td>
@@ -761,7 +764,10 @@
                         href="https://ko.wikipedia.org/wiki/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8"
                         target="_blank"
                       >
-                        <img src="/assets/img/ts.png" alt="TypeScript Logo" />
+                        <img
+                          src="/assets/img/stack/ts.png"
+                          alt="TypeScript Logo"
+                        />
                       </a>
                     </td>
                     <td>
@@ -788,7 +794,10 @@
                         href="https://ko.wikipedia.org/wiki/Node.js"
                         target="_blank"
                       >
-                        <img src="/assets/svg/nodejs.svg" alt="Node.js Logo" />
+                        <img
+                          src="/assets/img/stack/nodejs.svg"
+                          alt="Node.js Logo"
+                        />
                       </a>
                     </td>
                     <td>
@@ -820,7 +829,10 @@
                         href="https://ko.wikipedia.org/wiki/%EB%A6%AC%EC%95%A1%ED%8A%B8_(%EC%9B%B9_%ED%94%84%EB%A0%88%EC%9E%84%EC%9B%8C%ED%81%AC)"
                         target="_blank"
                       >
-                        <img src="/assets/svg/react.svg" alt="React Logo" />
+                        <img
+                          src="/assets/img/stack/react.svg"
+                          alt="React Logo"
+                        />
                       </a>
                     </td>
                     <td>
@@ -847,7 +859,7 @@
                         href="https://ko.wikipedia.org/wiki/SQL"
                         target="_blank"
                       >
-                        <img src="/assets/img/sql.png" alt="Express Logo" />
+                        <img src="/assets/img/stack/sql.png" alt="SQL Logo" />
                       </a>
                     </td>
                     <td>
@@ -872,7 +884,10 @@
                     <th scope="col" class="table-title letsp-md">Android</th>
                     <td>
                       <a href="https://koajs.com/" target="_blank">
-                        <img src="/assets/img/android.png" alt="Android Logo" />
+                        <img
+                          src="/assets/img/stack/android.png"
+                          alt="Android Logo"
+                        />
                       </a>
                     </td>
                     <td>
