[Update] award section - 2번째, 추계학술대회 관련 추가 - 상장 이미지 필요 !

--- a/index.html
+++ b/index.html
@@ -582,11 +582,6 @@
                     <td>
                       <div>[카찹] 통합 모빌리티 서비스</div>
                       <div>
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드
-                      </div>
-                      <div>
                         <span class="badge bg-grey">Android</span>
                         <span class="badge bg-grey">Java</span>
                         <span class="badge bg-grey">Kotlin</span>
@@ -607,22 +602,22 @@
                       <span
                         class="text-muted"
                         data-bs-toggle="modal"
-                        data-bs-target="#myModal2"
+                        data-bs-target="#myAwardModal1"
                       >
                         <i class="bi bi-file-earmark-slides"></i>
                       </span>
                       <!-- Modal 시작 -->
                       <div
                         class="modal fade"
-                        id="myModal2"
+                        id="myAwardModal1"
                         tabindex="-1"
-                        aria-labelledby="myModal2Label"
+                        aria-labelledby="myAwardModal1Label"
                         aria-hidden="true"
                       >
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h5 class="modal-title" id="myModal2Label">
+                              <h5 class="modal-title" id="myAwardModal1Label">
                                 시상식 증빙 자료
                               </h5>
                               <button
@@ -669,6 +664,91 @@
                                 이후 팀원들과 창업을 하게 되었고, 해당 대회를
                                 통해 맺게된 인연을 통해 초기 투자를 받을 수
                                 있었습니다.
+                              </p>
+                            </div>
+                            <div class="modal-footer">
+                              <button
+                                type="button"
+                                class="btn btn-secondary"
+                                data-bs-dismiss="modal"
+                              >
+                                Close
+                              </button>
+                              <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Modal 끝 -->
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <th class="table-title" scope="col">
+                      한국통신학회 추계종합학술발표회
+                    </th>
+                    <td>
+                      <div>
+                        [UC-Lab] GAN모델과 DNN모델을 활용한 Anomaly Detection에
+                        관한 연구
+                      </div>
+                      <div>
+                        <span class="badge bg-grey">Machine Learning</span>
+                        <span class="badge bg-grey">GAN</span>
+                        <span class="badge bg-grey">DNN</span>
+                        <span class="badge bg-grey">Notebook(ipynb)</span>
+                        <span class="badge bg-grey">Python</span>
+                      </div>
+                    </td>
+                    <td
+                      class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac"
+                    >
+                      우수논문상
+                    </td>
+                    <td class="text-center">
+                      <span
+                        class="text-muted"
+                        data-bs-toggle="modal"
+                        data-bs-target="#myAwardModal2"
+                      >
+                        <i class="bi bi-file-earmark-slides"></i>
+                      </span>
+                      <!-- Modal 시작 -->
+                      <div
+                        class="modal fade"
+                        id="myAwardModal2"
+                        tabindex="-1"
+                        aria-labelledby="myAwardModal2Label"
+                        aria-hidden="true"
+                      >
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="myAwardModal2Label">
+                                시상식 증빙 자료
+                              </h5>
+                              <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Close"
+                              ></button>
+                            </div>
+                            <div class="modal-body">
+                              <img
+                                src="assets/img/award/poster.jpg"
+                                class="modal-img"
+                                alt=""
+                                style="width: 80%; height: 80%"
+                              />
+                              <p class="modal-desc">
+                                시큐레이어(보안솔루션기업)에서 인턴직을 수행하며
+                                배웠던 경험을 <br />
+                                학부연구생 활동을 통해 학술대회에
+                                지원하였습니다. <br />
+                                머신러닝(GAN)를 활용한 이상탐지(Anomaly
+                                Detection)에 대해 주제로 우수논문상을
+                                수상하였습니다.
                               </p>
                             </div>
                             <div class="modal-footer">
